fixed muted category colors, scrollbars

--- a/NieR-Import.theme.css
+++ b/NieR-Import.theme.css
@@ -1,7 +1,3 @@
-.homeIcon-tEMBK1 {
-    background: url(https://i.imgur.com/3xonYy0.png) center/contain no-repeat;
-    height: 57px;
-}
 #app-mount:before {
     /* theatre effect */
     content: "";
@@ -162,12 +158,12 @@ div[class="backdrop-1wrmKB da-backdrop"] /* BACKDROP WHEN YOU LOOK AT CONTEXT ME
     background-color: transparent !important;
     border-color: transparent !important;
 }
-.auto-Ge5KZx::-webkit-scrollbar,
-.scrollerThemed-2oenus.themeGhostHairline-DBD-2d .scroller-2FKFPG::-webkit-scrollbar,
+.da-scroller::-webkit-scrollbar,
 .scrollerThemed-2oenus.themeGhostHairlineChannels-3G0x9_ .scroller-2FKFPG::-webkit-scrollbar {
     width: 4px;
 }
 .auto-Ge5KZx::-webkit-scrollbar-thumb,
+ .thin-1ybCId::-webkit-scrollbar-thumb,
  .scrollerThemed-2oenus.themeGhostHairline-DBD-2d .scroller-2FKFPG::-webkit-scrollbar-thumb, 
  .scrollerThemed-2oenus.themeGhostHairlineChannels-3G0x9_ .scroller-2FKFPG::-webkit-scrollbar-thumb,
  .scroller-2FKFPG::-webkit-scrollbar-thumb /* SCROLLBAR THUMB */ {
@@ -377,6 +373,7 @@ div[class="backdrop-1wrmKB da-backdrop"] /* BACKDROP WHEN YOU LOOK AT CONTEXT ME
  .theme-dark .avatarUploader-3XDtmn .removeButton-1hcZyG:hover, /* REMOVE SERVER ICON HOVER */
  .theme-dark .cancelButton-3hVEV6:hover, .downloadButton-23tKQp:hover, /* DOWNLOAD AND CANCEL BUTTON HOVER */
  .theme-dark .container-3-pyIM .content-2M3n_H a, /* MESSAGES PINNED MESSAGE ALERT */
+ .wrapper-CU3qI5.muted-1NRuDm, .wrapper-CU3qI5.muted-1NRuDm .name-IbjUBS,
  .theme-dark .alt-3btY0e .helper-2c73HK, /* USER STATUS HELP TEXT */
  .theme-dark .guildName-1Bc3Ta, /* RECENT MENTIONS SERVER NAME */
  .theme-dark .lookLink-9FtZy-.colorPrimary-3b3xI6, /* RESET CHANGES SETTINGS */
@@ -1500,6 +1497,8 @@ svg[name="Close"] > g > .fill {
 .mentioned-xhSam7:before {
     background-color: var(--color-alert);
 }
+.message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z,
+.mouse-mode.full-motion .mentioned-xhSam7:hover,
 .mentioned-xhSam7,
 .message-2qnXI6.mentioned-xhSam7.selected-2P5D_Z,
 .mouse-mode .mentioned-xhSam7:hover,
